# minasan

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  check-release.yml  docker-publish.yml  lint.yml  release.yml  tests.yml
src/: bot.rs  cli.rs  commands.rs  main.rs  storage.rs
