[package]
name = "minasan"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros"] }
