[package]
name = "minasan"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.12.2"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.21"
serde_json = "1.0.115"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
